# DSC-Bot

./: .build.yml  .env.example  .gitignore  .gitjournal.toml  CHANGELOG  Cargo.toml  README.md  license
migrations/: 20200811213637_create-strikes.sql  20200811213645_create-dbans.sql  20200811213650_create-badges.sql  20200812182700_make-dbans-id-serial.sql
src/: handler.orig  main.rs  models.rs  prelude.rs
src/checks/: mod.rs
src/commands/: badges.rs  folding.rs  general.rs  leveling.rs  mod.rs  moderation.rs  owner.rs  points.rs  qotd.rs  settings.rs  verification.rs
src/util/: data.rs  leveling.rs  mod.rs  moderation.rs  verification.rs
