[package]
name = "campmaster-constantine"
version = "0.1.0"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.0"
toml = "0.5.6"
serde = {version = "1.0.104", features = ["derive"]}
rand = "0.7.3"
pickledb = "0.4.1"
rusqlite = "0.22.0"
kankyo = "0.3"
env_logger = "0.7.1"