[package]
name = "dscbot"
version = "0.1.1"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
description = "A General-Purpose Discord bot"
keywords = ["discord", "bot"]
repository = "https://github.com/Discord-Scout-Council/DSC-Bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
pickledb = "0.4.1"
rusqlite = "0.23.1"
kankyo = "0.3"
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10", features = ["json"] }

[dependencies.serenity]
version = "0.8.6"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "model",
    "cache",
    "standard_framework",
    "utils",
    "rustls_backend"
]
