[package]
name = "dscbot"
version = "0.1.1"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
description = "A General-Purpose Discord bot"
keywords = ["discord", "bot"]
repository = "https://git.sr.ht/~muirrum/campmasterconstantine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
pickledb = "0.4.1"
rusqlite = "0.23.1"
kankyo = "0.3"
env_logger = "0.7.1"
log = "0.4.8"
tokio = { version = "0.2", features = ["macros"] }
bson = "0.14.1"

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity.git"
branch = "await"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "model",
    "cache",
    "standard_framework",
    "utils",
    "rustls_backend"
]

[dependencies.mongodb]
version = "0.10.0"
default-features = false
features = [
    "tokio-runtime"
]